# repos-menubar

./: LICENSE.md  README.md  index.html  package.json  pnpm-lock.yaml
src/: App.svelte  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 20230930075106_init.sql
src-tauri/src/: commands.rs  db.rs  events.rs  lib.rs  main.rs  utils.rs
src/components/: GitReposList.svelte  PathPicker.svelte  RepositoryBlock.svelte  TitleBar.svelte
src/lib/: GitReposList.svelte
src/lib/stores/: repoPath.ts  repos.ts  route.ts  settings.ts
src/views/: MainView.svelte  SettingsView.svelte
