[package]
name = "repos-menubar"
version = "0.0.0"
description = "A Tauri App"
authors = ["Leonardo Melo"]
license = "MIT"
repository = "https://github.com/leomeloxp/repos-menubar"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
tauri = { version = "1.3", features = [ "window-hide", "dialog-open", "macos-private-api", "shell-open", "system-tray"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Custom plugins
dirs = "5.0.1"
git2 = "0.18.1"
tauri-plugin-positioner = { version = "1.0.4", features = ["system-tray"] }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-sql = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1", features = ["sqlite"] }
sqlx = { version = "0.7.2", features = ["sqlite"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
